--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.554.0",
     "mongoose": "^8.20.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
